test_regress/t/t_tagged_case.out
%Error-UNSUPPORTED: t/t_tagged_case.v:24:18: Unsupported: tagged union
   24 |    typedef union tagged {
      |                  ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_case.v:25:7: Unsupported: void (for tagged unions)
   25 |       void Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:30:18: Unsupported: tagged union
   30 |    typedef union tagged packed {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:31:7: Unsupported: void (for tagged unions)
   31 |       void          Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:39:18: Unsupported: tagged union
   39 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:40:7: Unsupported: void (for tagged unions)
   40 |       void        Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:46:18: Unsupported: tagged union
   46 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:50:13: Unsupported: tagged union
   50 |       union tagged {
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:60:18: Unsupported: tagged union
   60 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:61:7: Unsupported: void (for tagged unions)
   61 |       void    Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:66:18: Unsupported: tagged union
   66 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:67:7: Unsupported: void (for tagged unions)
   67 |       void      Invalid;
      |       ^~~~
%Error: t/t_tagged_case.v:84:11: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   84 |       v = tagged Invalid;
      |           ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_case.v:87:10: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
   87 |          tagged Invalid : result = 1;
      |          ^~~~~~
%Error: t/t_tagged_case.v:90:162: syntax error, unexpected while
   90 |       do if ((result) !== (1)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", "t/t_tagged_case.v",90, (result), (1), "result", "1"); $stop; end while(0);;
      |                                                                                                                                                                  ^~~~~
%Error: t/t_tagged_case.v:93:9: syntax error, unexpected '=', expecting '('
   93 |       v = tagged Valid (123);
      |         ^
%Error: t/t_tagged_case.v:95:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
   95 |       case (v) matches
      |                ^~~~~~~
%Error: t/t_tagged_case.v:102:10: syntax error, unexpected '=', expecting '('
  102 |       wt = tagged Wide60 (60'hFEDCBA987654321);
      |          ^
%Error: t/t_tagged_case.v:104:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  104 |       case (wt) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:112:10: syntax error, unexpected '=', expecting '('
  112 |       wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |          ^
%Error: t/t_tagged_case.v:114:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  114 |       case (wt) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:122:10: syntax error, unexpected '=', expecting '('
  122 |       wt = tagged Byte8NonZeroLSB (8'hA5);
      |          ^
%Error: t/t_tagged_case.v:124:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  124 |       case (wt) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:131:10: syntax error, unexpected '=', expecting '('
  131 |       wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |          ^
%Error: t/t_tagged_case.v:133:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  133 |       case (wt) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:140:10: syntax error, unexpected '=', expecting '('
  140 |       at = tagged Arr '{10, 20, 30, 40};
      |          ^
%Error: t/t_tagged_case.v:142:17: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  142 |       case (at) matches
      |                 ^~~~~~~
%Error: t/t_tagged_case.v:150:13: syntax error, unexpected '=', expecting '('
  150 |       instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |             ^
%Error: t/t_tagged_case.v:152:20: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  152 |       case (instr) matches
      |                    ^~~~~~~
%Error: t/t_tagged_case.v:160:11: syntax error, unexpected '=', expecting '('
  160 |       cht = tagged Invalid;
      |           ^
%Error: t/t_tagged_case.v:162:18: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  162 |       case (cht) matches
      |                  ^~~~~~~
%Error: t/t_tagged_case.v:169:11: syntax error, unexpected =-then-new, expecting '('
  169 |       obj = new(42);
      |           ^
%Error: t/t_tagged_case.v:172:18: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  172 |       case (clt) matches
      |                  ^~~~~~~
%Error: Cannot continue
        ... This fatal error may be caused by the earlier error(s); resolve those first.
